<resources>
    <string name="app_name">Submission3</string>
    <string name="tab_text_1">Film</string>
    <string name="tab_text_2">TV</string>
    <string name="ex_item_film_name">Judul Film</string>
    <string name="ex_item_film_description">Deskripsi Film</string>
    <string name="ex_item_tv_name">Judul TV Series</string>
    <string name="ex_item_tv_description">Deskripsi TV Series</string>
    <string name="title_detail">Judul</string>
    <string name="title_dummy">judul judul judul judul judul</string>
    <string name="date_release_detail">Tanggal Rilis</string>
    <string name="date_dummy_detail">Tanggal Tanggal Tanggal Tanggal</string>
    <string name="rating_dummy_detail">Rating Rating Rating</string>
    <string name="rating_title_detail">Rating</string>
    <string name="description_title_detail">Deskripsi</string>
    <string name="lorem">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</string>
    <string name="change_language">Ubah Bahasa</string>
    <string-array name="title_film">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>Creed II</item>
        <item>Once Upon A Deadpool</item>
        <item>Preman Pensiun</item>
        <item>Spiderman</item>
        <item>Bird Box</item>
    </string-array>
    <string-array name="date_film">
        <item>Oktober 05, 2018</item>
        <item>Desember 21, 2018</item>
        <item>April 23, 2018</item>
        <item>Oktober 30, 2018</item>
        <item>Desember 15, 2018</item>
        <item>Nopember 14, 2018</item>
        <item>Desember 13, 2018</item>
        <item>January 17, 2019</item>
        <item>Desember 01, 2018</item>
        <item>Nopember 12, 2018</item>
    </string-array>
    <string-array name="description_film">
        <item>Musisi kawakan Jackson Maine (Bradley Cooper) menemukan-dan jatuh cinta dengan artis yang sedang berjuang Ally (Gaga). Dia baru saja menyerah pada mimpinya untuk menjadi besar sebagai penyanyi - sampai Jack membujuknya menjadi sorotan. Tetapi bahkan ketika karier Ally lepas landas, sisi pribadi dari hubungan mereka hancur, ketika Jack berjuang terus-menerus dengan saigan internalnya sendiri.</item>
        <item>Dulunya merupakan rumah bagi peradaban paling maju di Bumi, Atlantis sekarang merupakan kerajaan bawah laut yang diperintah oleh Raja Orm yang haus kekuasaan. Dengan pasukan yang sangat besar, Orm berencana untuk menaklukkan orang-orang samudera yang tersisa dan kemudian ke permukaan dunia. Yang menghalangi jalannya adalah Arthur Curry, saudara tiri manusia setengah manusia Orm dan pewaris sejati takhta.</item>
        <item>Ketika Avengers dan sekutu mereka terus melindungi dunia dari ancaman yang terlalu besar untuk ditangani oleh satu pahlawan, bahaya baru telah muncul dari bayang-bayang kosmik: Thanos. Seorang lalim penghinaan intergalaksi, tujuannya adalah untuk mengumpulkan semua enam Batu Infinity, artefak kekuatan yang tak terbayangkan, dan menggunakannya untuk menimbulkan keinginannya yang terpelintir pada semua kenyataan. Segala yang Avengers telah perjuangkan telah mengarah ke saat ini - nasib Bumi dan keberadaannya sendiri tidak pernah lebih pasti.</item>
        <item>Penyanyi Freddie Mercury, gitaris Brian May, drummer Roger Taylor dan gitaris bass John Deacon menggemparkan dunia musik ketika mereka membentuk band rock n roll Queen pada tahun 1970. Lagu-lagu hit menjadi klasik instan. Ketika gaya hidup Mercury yang semakin liar mulai lepas kendali, Queen segera menghadapi tantangan terbesarnya - menemukan cara untuk menjaga band bersama di tengah kesuksesan dan kelebihan.</item>
        <item>Dalam pelarian pada tahun 1987, Bumblebee menemukan tempat perlindungan di tempat barang rongsokan di kota pantai kecil California. Charlie, di puncak usia 18 dan berusaha menemukan tempatnya di dunia, menemukan Bumblebee, bekas luka pertempuran dan patah. Ketika Charlie menghidupkannya, dia dengan cepat mengetahui bahwa ini bukan bug VW kuning biasa</item>
        <item>Antara kewajiban pribadi dan pelatihan untuk pertarungan besar berikutnya melawan lawan yang memiliki ikatan dengan masa lalu keluarganya, Adonis Creed menghadapi tantangan hidupnya.</item>
        <item>Fred Savage yang diculik dipaksa untuk menahan Deadpool PG-13 rendition of Deadpool 2 sebagai cerita Princess Bride-esque yang penuh dengan keajaiban, keajaiban &amp; nol F.</item>
        <item>Setelah tiga tahun, bisnis Muslihat (Epi Kusnandar), yang telah pensiun sebagai preman, memiliki masalah. Penurunan penjualan. Muslihat juga menghadapi masalah baru ketika Safira (Safira Maharani), satu-satunya anak perempuannya, tumbuh di masa remaja dan mulai dikunjungi oleh anak laki-laki. Masalah yang lebih besar: gesekan antara mantan bawahannya.</item>
        <item>Miles Morales menyulap hidupnya antara menjadi siswa sekolah menengah dan menjadi manusia laba-laba. Ketika Wilson "Kingpin" Fisk menggunakan collider super, yang lain dari seberang Spider-Verse diangkut ke dimensi ini.</item>
        <item>Lima tahun setelah kehadiran tak terlihat yang tidak menyenangkan membuat sebagian besar masyarakat bunuh diri, seorang yang selamat dan dua anaknya melakukan upaya putus asa untuk mencapai keselamatan.</item>
    </string-array>
    <string-array name="image_film">
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="rating_film">
        <item>7.5</item>
        <item>6.8</item>
        <item>8.3</item>
        <item>8.0</item>
        <item>6.5</item>
        <item>6.8</item>
        <item>6.9</item>
        <item>6.5</item>
        <item>8.4</item>
        <item>6.9</item>
    </string-array>
    <string-array name="title_tv">
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Flash</item>
        <item>GOT</item>
        <item>Gotham</item>
        <item>Grey\'s Anatomy</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>Naruto Shippuden</item>
    </string-array>
    <string-array name="date_tv">
        <item>Pebruari 26, 1986</item>
        <item>Agustus 02, 2006</item>
        <item>Januari 31, 1999</item>
        <item>Agustus 07, 2014</item>
        <item>April 17, 2011</item>
        <item>September 22, 2014</item>
        <item>Maret 27, 2005</item>
        <item>Pebruari 03, 2019</item>
        <item>Maret 17, 2017</item>
        <item>Pebruari 15, 2007</item>
    </string-array>
    <string-array name="description_tv">
        <item>Dragon Ball mengikuti petualangan protagonis Goku, seorang anak lelaki naif yang kuat, yang setelah bertemu Bulma, berangkat untuk mengumpulkan tujuh Bola Naga pemberi harapan. Setelah menjadi mahasiswa master seni bela diri, Master Roshi (juga dikenal sebagai Kame Sennin), ia dan muridnya, Krillin, memasuki turnamen yang menarik para pejuang paling kuat di dunia.</item>
        <item>Manga telah diadaptasi menjadi serial anime yang diproduksi oleh A-1 Pictures, Dentsu Inc., Satelight, Bridge, dan CloverWorks yang mulai mengudara di Jepang pada 12 Oktober 2009. Selain itu, A-1 Pictures telah mengembangkan sembilan animasi video asli dan dua film fitur animasi.</item>
        <item>Family Guy adalah serial televisi sitkom animasi Amerika yang dibuat oleh Seth MacFarlane untuk Fox Broadcasting Company. Seri ini berpusat pada Griffin, sebuah keluarga yang terdiri dari orang tua Peter dan Lois; anak-anak mereka, Meg, Chris, dan Stewie; dan anjing peliharaan antropomorfik mereka, Brian.</item>
        <item>The Flash adalah serial televisi superhero Amerika yang dikembangkan oleh Greg Berlanti, Andrew Kreisberg, dan Geoff Johns, ditayangkan di The CW. Ini didasarkan pada karakter DC Comics Barry Allen / Flash, seorang pejuang kejahatan super berkostum dengan kekuatan untuk bergerak pada kecepatan manusia super. Ini adalah spin-off dari Arrow, yang ada di alam semesta fiksi yang sama.</item>
        <item>Game of Thrones adalah serial televisi drama fantasi Amerika yang dibuat oleh David Benioff dan D. B. Weiss untuk HBO. Ini adalah adaptasi dari A Song of Ice and Fire, seri novel fantasi George R. R. Martin, yang pertama adalah A Game of Thrones. Acara ini diproduksi dan difilmkan di Belfast dan di tempat lain di Inggris. Lokasi syuting juga termasuk Kanada, Kroasia, Islandia, Malta, Maroko, dan Spanyol</item>
        <item>Gotham adalah serial televisi drama kriminal Amerika yang dikembangkan oleh Bruno Heller, diproduksi oleh Warner Bros. Television dan berdasarkan pada karakter yang diterbitkan oleh DC Comics dan muncul dalam waralaba Batman, terutama James Gordon dan Bruce Wayne. Serial ini ditayangkan perdana di Fox pada 22 September 2014, dan berakhir pada 25 April 2019. Serial ini dibintangi Ben McKenzie sebagai Jim Gordon dan David Mazouz sebagai Bruce Wayne.</item>
        <item>Grey\'s Anatomy adalah serial televisi drama medis Amerika yang ditayangkan perdana pada tanggal 27 Maret 2005, di American Broadcasting Company (ABC) sebagai pengganti pertengahan musim. Seri fiksi berfokus pada kehidupan magang bedah, penghuni, dan dokter yang hadir, ketika mereka berkembang menjadi dokter berpengalaman sambil berusaha mempertahankan kehidupan pribadi dan hubungan.</item>
        <item>Hanna adalah serial televisi web drama aksi Amerika, berdasarkan film 2011 dengan nama yang sama, di Prime Video. Serial ini dibuat dan ditulis oleh David Farr, disutradarai oleh Sarah Adina Smith, dan dibintangi oleh Esme Creed-Miles, Joel Kinnaman, dan Mireille Enos. Episode pertama tersedia di Amazon Video sebagai pratinjau terbatas waktu pada 3 Februari 2019. Musim penuh delapan episode pertama dirilis pada 29 Maret 2019. Pada April 2019, Amazon memperbarui seri untuk musim kedua.</item>
        <item>Marvel\'s Iron Fist, atau sekadar Iron Fist, adalah serial televisi web Amerika yang dibuat untuk Netflix oleh Scott Buck, berdasarkan karakter Marvel Comics dengan nama yang sama. Ini diatur dalam Marvel Cinematic Universe (MCU), berbagi kontinuitas dengan film-film franchise dan merupakan yang keempat dalam serangkaian acara yang mengarah ke miniseri crossover The Defenders.</item>
        <item>Naruto: Shippuden adalah serial anime yang diadaptasi dari Bagian II dari seri manga Masashi Kishimoto, dengan tepat 500 episode. Sudah diatur dua setengah tahun setelah Bagian I di alam semesta Naruto, mengikuti remaja Ninja Naruto Uzumaki dan sekutunya. Serial ini disutradarai oleh Hayato Date, dan diproduksi oleh Pierrot dan TV Tokyo. Ini mulai mengudara pada 15 Februari 2007 di TV Tokyo, dan berakhir pada 23 Maret 2017</item>
    </string-array>
    <string-array name="image_tv">
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="rating_tv">
        <item>8.5</item>
        <item>8.0</item>
        <item>8.1</item>
        <item>7.8</item>
        <item>9.1</item>
        <item>7.8</item>
        <item>7.6</item>
        <item>7.5</item>
        <item>6.5</item>
        <item>8.5</item>
    </string-array>
</resources>